# Discord-Publisher

./: .gitignore  CHANGELOG.md  Procfile  Publication_template_discord.html  README.md  bot_discord.py  bot_discord_server1.py  bot_discord_server2.py  build-standalone.ps1  main.js  package-lock.json  package.json  publisher_api.py  render.yaml  requirements.txt  test_startup.bat
.github/workflows/: build-release.yml  release.yml
.postman/: resources.yaml
Tampermonkey/: DiscordPublisherDataExtractor.js
docs/: AUTO_UPDATE_SETUP.md  CHANGELOG_AUTO_UPDATE.md  GITHUB_SECRETS.md  QUICK_START_AUTO_UPDATE.md
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
python/: README.md  bot_frelon.py  bot_server1.py  bot_server2.py  discord-bots.service  main_bots.py  publisher_api.py  requirements.txt
python/scripts/: announcements.py  api_key_auth.py  bot_frelon.py  bot_lifecycle.py  config.py  content_parser.py  discord_api.py  f95_public_api_client.py  forum_manager.py  http_handlers.py  image_utils.py  main_bots - Copie.py.bak  main_bots.py  nexus_export.py  publisher_api.py  publisher_api.py.bak  publisher_bot.py  scheduled_tasks.py  scraper.py  slash_commands.py  supabase_client.py  translator.py  version_checker.py  work_tracking_catchup_digest.py  work_tracking_dates.py  work_tracking_refresh.py  (+1 more)
scripts/: README.md  build-win.js  bump-version.js  set-version.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  write_env.rs
(+336 files in other folders)
